block list implementation